--- a/LootChest/index.html
+++ b/LootChest/index.html
@@ -3,9 +3,13 @@
 	<head>
 		<meta charset = "UTF-8" />
 		<title>Attack on Loot Chest</title>
-		<script src = "../build/phaser.min.js"></script>
+		<script src = "../../phaser-master/build/phaser.min.js"></script>
 		<script src = "src/Boot.js"></script>
 		<script src = "src/Game.js"></script>
+		<script src = "src/Player.js"></script>
+		<script src = "src/Chest.js"></script>
+		<script src = "src/Chip.js"></script>
+		<script src = "src/ElectroShield.js"></script>
 	</head>
 	
 	<body>
