--- a/shmup/index.html
+++ b/shmup/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <title>obamacare</title>
-        <script src="../build/phaser.min.js"></script>
+        <script src = "../../phaser-master/build/phaser.min.js"></script>
     </head>
     <body>
 
